[project]
name = "leetcode-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "pyright>=1.1.407",
    "rich>=14.2.0",
    "ruff>=0.14.3",
    "streamlit>=1.51.0",
    "typer>=0.20.0",
    "watchdog>=6.0.0",
]
