[package]
name = "leetcode-tracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
duckdb = { version = "1.0", features = ["bundled"] }

# Auth
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }

# Session management
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment & Config
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Migration binary
[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
